--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
-background: 'https://lapreamarcelo.github.io/img/bg-index.jpg'
+background: 'https://lapreamarcelo.github.io/img/bg-home.jpg'
 ---
